--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,10 @@
 					<artifactId>jersey-server</artifactId>
 					<groupId>com.sun.jersey</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>servlet-api</artifactId>
+					<groupId>javax.servlet</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -54,6 +58,10 @@
 					<artifactId>jersey-server</artifactId>
 					<groupId>com.sun.jersey</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>servlet-api</artifactId>
+					<groupId>javax.servlet</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -68,6 +76,10 @@
 				<exclusion>
 					<artifactId>jersey-server</artifactId>
 					<groupId>com.sun.jersey</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>servlet-api</artifactId>
+					<groupId>javax.servlet</groupId>
 				</exclusion>
 			</exclusions>
 		</dependency>
