--- a/pom.xml
+++ b/pom.xml
@@ -118,5 +118,20 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.3.3</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.websocket</groupId>
+			<artifactId>javax.websocket-api</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.undertow</groupId>
+			<artifactId>undertow-websockets-jsr</artifactId>
+			<version>1.0.3.Final</version>
+		</dependency>
+		<!-- <dependency> <groupId>org.jboss.spec.javax.websocket</groupId> <artifactId>jboss-websocket-api_1.0_spec</artifactId> 
+			<version>1.0.0.Final</version> </dependency> <dependency> <groupId>org.eclipse.jetty.websocket</groupId> 
+			<artifactId>websocket-client</artifactId> <version>9.1.3.v20140225</version> 
+			</dependency> -->
+
 	</dependencies>
 </project>
