--- a/pom.xml
+++ b/pom.xml
@@ -120,5 +120,10 @@
 			<artifactId>undertow-websockets-jsr</artifactId>
 			<version>1.0.3.Final</version>
 		</dependency>
+		<!-- <dependency>
+			<groupId>com.esotericsoftware.kryo</groupId>
+			<artifactId>kryo</artifactId>
+			<version>2.23.0</version>
+		</dependency> -->
 	</dependencies>
 </project>
