--- a/pom.xml
+++ b/pom.xml
@@ -144,10 +144,15 @@
 			<version>${undertow.websocket.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.esotericsoftware.kryo</groupId>
+			<groupId>com.esotericsoftware</groupId>
 			<artifactId>kryonet</artifactId>
-			<version>2.21-all</version>
+			<version>2.22.0-RC1</version>
 		</dependency>
+<!-- 		<dependency>
+			<groupId>de.javakaffee</groupId>
+			<artifactId>kryo-serializers</artifactId>
+			<version>0.27</version>
+		</dependency> -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
