Hadoop version bump to 2.5.0. Groovy dependency excluded

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<hadoop.version>2.4.1</hadoop.version>
+		<hadoop.version>2.5.0</hadoop.version>
 		<undertow.websocket.version>1.0.15.Final</undertow.websocket.version>
 		<resteasy.version>3.0.8.Final</resteasy.version>
 		<metrics.version>3.0.1</metrics.version>
@@ -149,8 +149,6 @@
 			<artifactId>kryonet</artifactId>
 			<version>2.22.0-RC1</version>
 		</dependency>
-		<!-- <dependency> <groupId>de.javakaffee</groupId> <artifactId>kryo-serializers</artifactId> 
-			<version>0.27</version> </dependency> -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
@@ -160,6 +158,12 @@
 			<groupId>org.jboss.weld.se</groupId>
 			<artifactId>weld-se-core</artifactId>
 			<version>2.2.2.Final</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>groovy-all</artifactId>
+					<groupId>org.codehaus.groovy</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.codahale.metrics</groupId>
